# fino

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
fino/: contacts.py  encryption.py  fino.py  history.py  ipfs.py  nostr.py  profiles.py  receive.py  send.py  utils.py
src/fino/: console.py  ipfs.py  main.py  nostr.py  utils.py
src/fino/commands/: gen_key.py  receive.py  send.py
